docs: 完善 README 文档
- 添加 GitHub Actions 构建状态徽章
- 新增特性列表和版本信息
- 优化 Docker Compose 配置（增加 agent 端口）
- 添加 Docker 命令行启动方式
- 补充初始密码获取、插件管理、环境变量说明
- 添加注意事项、许可证和相关链接